--- a/frontend/public/과제/3조_wep조별과제.css
+++ b/frontend/public/과제/3조_wep조별과제.css
@@ -66,7 +66,16 @@ li{list-style-type: none;}
    margin:0 auto;
 }
 
-
+.select{
+	border-style:none;
+	background-color: #046241;
+	font-size: 20px;
+   	font-weight:bold;
+   	color: white;
+   	margin:0 auto;
+	
+	
+}
 
 /* 메인시작 */
 .main_img1 {
