--- a/frontend/public/과제/intro.css
+++ b/frontend/public/과제/intro.css
@@ -69,6 +69,40 @@ li{list-style-type: none;}
 
 .result{
 	display: flex;
+	width: 800px;
+	margin-top: 90px;
+}
+
+.result img{
+	width: 400px;
+}
+
+.result_text{
+	margin-left: 20px;
+	margin-top:  20px;
+	margin-right: 20px;
+}
+
+.result_text_content{
+	font-size: 15px;
+	padding-top: 10px;
+}
+
+.result span{
+	font-weight: bold;
+}
+
+.result_h{
+	font-size: 20px;
 	
 }
 
+.bottom_result{
+	width: 100%; height:340px;
+	background-color: #EEEEEE;
+	background-repeat: repeat;
+}
+
+.bottom_result_space{
+	padding-top: 40px; 
+}
