--- a/frontend/public/과제/index.css
+++ b/frontend/public/과제/index.css
@@ -39,12 +39,15 @@ li{list-style-type: none;}
 	margin-left: 25px;
 }
 
+.main_img_space{
+	width: 1600px;
+}
 /* 메인 이미지 크기, 가운데 정렬 */
 #main_img{
-	width:100%; height:600px;
+	width:1600px; height:600px;
 	background-image: url("img/main.jpg");
-	background-repeat:no-repeat;
 	background-position: center;
+	background-repeat:no-repeat;	
 	margin: 30px 0px;
 }
 
@@ -83,7 +86,7 @@ li{list-style-type: none;}
 
 /* 하단 본문 내용 공간 */
 .uc1{
-	width:1200px;
+	width:1100px;
 	display: flex;
 	justify-content: center;
 	padding-top: 55px;}
@@ -111,3 +114,50 @@ li{list-style-type: none;}
 	margin-left: 5px;
 	padding-bottom: 10px;
 }
+
+/*---------------- 푸터 시작----------------*/
+#footer{
+ background-color: #292C32;
+	width: 100%;
+	margin-top: 20px;
+	display: flex;
+	padding-bottom: 40px;
+}
+/*------푸터 본문-------*/
+.ft_context{
+	width: 1200px;
+	display: flex;
+	margin: 0 auto;
+	padding-top: 30px;
+}
+.ft_call{
+	font-size: 15px;
+	padding-bottom: 10px;
+}
+/*------푸터 좌측배너-------*/
+.ft_left{
+	width: 200px;
+	color:white;	
+	font-size: 20px;
+}
+.ft_left h3{ color:#F4E4E4;}
+
+/*------푸터 우측배너-------*/
+.ft_right{width: 100px;
+display:flex;}
+
+/*------푸터 가운데배너-------*/
+.ft_center{
+	color:white;
+	align-items: center;
+	margin-right: 100px;
+	margin-left: 100px;
+}
+.ft_top{
+	margin-bottom: 20px;
+	font-size: 11px;
+}
+.ft_bottom{margin-top: 10px;}
+.ft_bot{ font-size: 11px;}
+#footer a{color: white; text-decoration: none;}
+.aline{font-size: 5px; color: #e8e8e8;}
