박민재 황기준 조별과제

--- a/frontend/public/과제/intro.css
+++ b/frontend/public/과제/intro.css
@@ -27,7 +27,7 @@ li{list-style-type: none;}
 
 /* 헤더 사이즈, 정렬방식 */
 #haeder{
-	width: 1200px; 
+	width: 800px; 
 	margin: 0 auto;
 	display:flex;
 	justify-content: space-between;
@@ -106,3 +106,50 @@ li{list-style-type: none;}
 .bottom_result_space{
 	padding-top: 40px; 
 }
+
+/*---------------- 푸터 시작----------------*/
+#footer{
+ background-color: #292C32;
+	width: 100%;
+	margin-top: 20px;
+	display: flex;
+	padding-bottom: 40px;
+}
+/*------푸터 본문-------*/
+.ft_context{
+	width: 800px;
+	display: flex;
+	margin: 0 auto;
+	padding-top: 30px;
+}
+.ft_call{
+	font-size: 15px;
+	padding-bottom: 10px;
+}
+/*------푸터 좌측배너-------*/
+.ft_left{
+	width: 200px;
+	color:white;	
+	font-size: 20px;
+}
+.ft_left h3{ color:#F4E4E4;}
+
+/*------푸터 우측배너-------*/
+.ft_right{width: 100px;
+display:flex;}
+
+/*------푸터 가운데배너-------*/
+.ft_center{
+	color:white;
+	align-items: center;
+	margin-right: 100px;
+	margin-left: 100px;
+}
+.ft_top{
+	margin-bottom: 20px;
+	font-size: 11px;
+}
+.ft_bottom{margin-top: 10px;}
+.ft_bot{ font-size: 11px;}
+#footer a{color: white; text-decoration: none;}
+.aline{font-size: 5px; color: #e8e8e8;}
