--- a/frontend/public/과제/index.css
+++ b/frontend/public/과제/index.css
@@ -27,7 +27,7 @@ li{list-style-type: none;}
 
 /* 헤더 사이즈, 정렬방식 */
 #haeder{
-	width: 1200px; 
+	width: 800px; 
 	margin: 0 auto;
 	display:flex;
 	justify-content: space-between;
@@ -53,7 +53,7 @@ li{list-style-type: none;}
 
 /* 본문 사이즈, 배치 방법 */
 #content{
-	width: 1200px;
+	width: 800px;
 	margin: 0 auto;
 	display: flex;
 	margin-top: 20px;
@@ -62,7 +62,8 @@ li{list-style-type: none;}
 /* 상단  본문 배치방법, 사이즈 */
 .top_content{
 	display:flex;
-	width: 450px;
+	width: 400px;
+	padding-left: 10px;
 }
 /* 왼쪽본문 텍스트 위치 정렬 */
 .top_text{margin-left: 40px;}
@@ -72,13 +73,15 @@ li{list-style-type: none;}
 
 /* 왼쪽본문 텍스트 타이틀 굵기, 글자 크기 */
 .t1{
-	font-size:20px;
+	font-size:18px;
 	font-weight: bold;
 }
-
+.top_text_content{
+	font-size: 12px;
+}
 /* 하단 본문 뒷 배경 */
 .under_c{
-	width: 100%; height:350px;
+	width: 100%; height:250px;
 	background-color: #F9F9F9;
 	background-repeat:repeat;
 	margin-top: 40px;
@@ -86,20 +89,20 @@ li{list-style-type: none;}
 
 /* 하단 본문 내용 공간 */
 .uc1{
-	width:1100px;
+	width:800px;
 	display: flex;
 	justify-content: center;
-	padding-top: 55px;}
+	padding-top: 40px;}
 
 /* 하단 본문 내용 각각 공간과 배경 */
 .uc1 div{
-	width: 250px; height:240px;
+	width: 190px; height:190px;
 	background-color: white;
 	
 }
 
 /* 하단 본문 내용의 사진 크기 */
-.uc1 img{width: 250px;}
+.uc1 img{width: 190px;}
 
 .uc_t_h span{
 	font-weight: bold;
@@ -125,7 +128,7 @@ li{list-style-type: none;}
 }
 /*------푸터 본문-------*/
 .ft_context{
-	width: 1200px;
+	width: 800px;
 	display: flex;
 	margin: 0 auto;
 	padding-top: 30px;
