--- a/frontend/public/js/0.과제/2_과제/과제2.css
+++ b/frontend/public/js/0.과제/2_과제/과제2.css
@@ -1,1 +1,57 @@
 @charset "UTF-8";
+*{
+	margin: 0 auto;
+	padding: 0px;
+}
+
+#warp{
+	width: 1200px;
+	
+}
+#join_login{
+	width: 800px; height: 600px;
+	margin-top: 100px;
+	border: 2px solid black;
+	display:flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.join{
+	width:350px; height:350px;
+	border: 1px solid black;
+	display:flex;
+	flex-direction:column;
+	align-items: center;
+	justify-content: center;
+	
+}
+.join input{
+	width: 300px; height: 50px;
+	padding-left:5px;
+	margin-bottom: 25px;
+}
+	
+.login{
+	width:350px; height:350px;
+	border: 1px solid black;
+	display:flex;
+	flex-direction:column;
+	align-items: center;
+	justify-content: center;
+}
+.login input{
+	width: 300px; height: 50px;
+	padding-left:5px;
+	margin-bottom: 25px;
+	
+}
+
+.btn{
+	font-size:20px;
+	font-weight:bold;
+	color:white;
+	border-style:none;
+	border-color: #AFD6EA;
+	background-color: #AFD6EA;
+}
