--- a/frontend/public/js/0.과제/3_과제/과제3.css
+++ b/frontend/public/js/0.과제/3_과제/과제3.css
@@ -1,1 +1,51 @@
 @charset "UTF-8";
+
+*{
+margin: 0 auto;
+padding: 0px;
+}
+
+#wrap{width: 1200px;display: flex;}
+	
+h1{text-align:center;
+
+padding-bottom: 100px;
+font-weight: bold;
+font-size: 50px; 
+letter-spacing: 50px;}
+
+.save{
+	width: 300px;
+	margin-top:100px;
+	align-items: center;
+}
+
+.save input{
+	width: 250px;
+	height: 25px;
+	margin-bottom: 25px;
+}
+
+.save button{width: 250px; height: 25px;
+			background-color: black;
+			color: white;}
+
+.output{
+	width: 500px;
+	align-items: center;
+	margin-top: 50px;
+	padding: 50px;
+	background-color: gray;
+}
+
+.output table{width: 500px; 
+
+text-align: center;}
+
+.output td , th{ border-bottom: 1px solid black;
+}
+
+.outputTable button{background-color: black;
+			color: white;}
+			
+.delete{width:100px; height: 30px;}
