--- a/jspweb/src/main/webapp/test/chatRoom/chatRoom.css
+++ b/jspweb/src/main/webapp/test/chatRoom/chatRoom.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+.StartChat{
+	width: 200px;
+	height: 80px;
+	color: white;
+	background-color: black;
+	font-size: 20px;
+	font-weight: bold;
+	border: none;
+}
+
 .wrap{
 	width: 600px;
 	margin: 0 auto;
@@ -18,18 +28,38 @@
 	height: 600px;
 	overflow: scroll;
 	display: flex;
-	align-items: flex-start;
+	flex-direction : column;
 	justify-content: flex-end;
+	align-items: flex-end
 }
 .chatContent::-webkit-scrollbar {display:none;}
+
+.chatContent .otherChat{
+	display: flex;
+	flex-direction : column;
+	justify-content: flex-end;
+	align-items: flex-start;
+}
+
+.speechBubble{
+	width: 250px;
+	margin: 5px;
+}
+
+.anonymousId , .Chattime{
+	font-size: 15px;
+}
 
 .anonymousChat{
 	border: 1px solid #e8e8e8;
 	background-color: #e8e8e8;
 	width: 250px;
+	height : 50px;
+	font-size: 20px;
+	padding: 5px;
 }
 
-.StartChat , .EndChat{
+.EndChat{
 	width: 100%;
 	height: 40px;
 	color: white;
@@ -61,3 +91,4 @@
 	border-style:none;
 	font-size: 30px; 
 }
+
