--- a/jspweb/src/main/webapp/css/member.css
+++ b/jspweb/src/main/webapp/css/member.css
@@ -1,1 +1,89 @@
 @charset "UTF-8";
+
+@font-face {
+    font-family: 'DOSIyagiMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/DOSIyagiMedium.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+*{
+	font-family:'DOSIyagiMedium' !important;
+}
+
+.wrap{
+	margin: 0 auto;
+	width: 700px;
+	border: 3px ridge #ACACAC;
+}
+
+.signuphaeder{
+	height: 40px;
+	background-color: #010072;
+	color: white;
+	border: 1px solid #ACACAC;
+	padding-left: 5px;
+	line-height: 40px;
+	font-size: 20px;
+}
+
+.signupspc{
+	width: 100%;
+	padding-top : 10px;
+	padding-left : 10px;
+	background-color: #ACACAC;
+	font-size: 20px;
+}
+
+.signupspc input {
+	width : 300px;
+	height : 30px;
+	margin-top : 10px;
+	border-style: inset;
+	padding: 5px;
+	font-size: 20px;
+}
+
+.signupspc button {
+	border-left: 1px solid white;
+	border-top: 1px solid white;
+	border-style: ridge;
+	background-color: #ACACAC;
+	width : 70px;
+	height : 30px;
+	font-size: 15px;
+}
+
+.mimg{
+	height: 40px !important;
+}
+
+input[type=file]::file-selector-button {
+	border-left: 1px solid white;
+	border-top: 1px solid white;
+	border-style: ridge;
+	background-color: #ACACAC;
+	font-family:'DOSIyagiMedium' !important;
+	width : 80px;
+	height: 25px; 
+	font-size: 15px;
+}
+.signupbtn{
+	width : 100%;
+	display: flex;
+	justify-content: center;
+	padding: 10px;
+}
+.signupbtn button{
+	width: 200px;
+	font-size: 20px;
+}
+
+/*----------로그인 css-----------*/
+.logincheckbox{
+	color: #ea3636; font-size: 18px;
+	margin: 20px 0px; text-align: center;
+}
+.findbtnbox a{
+	margin-right: 10px;
+	}
