--- a/jspweb/src/main/webapp/hrm/hrm.css
+++ b/jspweb/src/main/webapp/hrm/hrm.css
@@ -37,9 +37,12 @@
 }
 .OutputBox{
 	border: 1px solid black;
+	height: 580px;
+	overflow: scroll;
 }
 
 .outputTable{
 	width: 600px;
+	
 	text-align: center;
 }
