--- a/jspweb/src/main/webapp/css/board/list.css
+++ b/jspweb/src/main/webapp/css/board/list.css
@@ -1,1 +1,111 @@
 @charset "UTF-8";
+
+/* 1. 테이블 CSS*/
+	/* 1-1 테이블 전체구역*/
+.boardTable{
+	width: 100%;
+	margin-top: 30px;
+	border-collapse: collapse;
+}
+
+/* 1-2 테이블 헤더(제목) , 데이터(셀) 구역 */
+.boardTable th, td{
+	text-align: center;
+	padding:  13px 0px;
+	/* 내용물이 구역보다 커졌을때. ... */
+	white-space: nowrap; /* 자동 줄바꿈 해제 */
+	overflow: hidden;/* 내용물이 구역보다 커졌을때 내용물 숨기기 */
+	text-overflow: ellipsis;/* 넘쳐서 숨겨진 내용물은 ...표시하기 */
+	max-width: 150px;
+}
+
+/* 1-2 테이블 헤더(제목) 구역 */
+.boardTable th{
+	background-color: #010072;
+	color: white;
+}
+
+/* 1-3 테이블 열 길이 */
+.boardTable th:nth-child(1){ width: 5%;} /* 1번째 열 = 첫번째 th */
+.boardTable th:nth-child(2){ width: 10%;} /* 2번째 열 = 첫번째 th */
+.boardTable th:nth-child(3){ width: 60%;} /* 3번째 열 = 첫번째 th */
+.boardTable th:nth-child(4){ width: 10%;} /* 4번째 열 = 첫번째 th */
+.boardTable th:nth-child(5){ width: 5%;} /* 5번째 열 = 첫번째 th */
+.boardTable th:nth-child(6){ width: 10%;} /* 6번째 열 = 첫번째 th */
+
+/* 1-5 홀수/짝수행 마다 구역 */
+.boardTable tr:nth-child(odd){ background-color: #ACACAC; }
+.boardTable tr:nth-child(even){ background-color: #ffffff; }
+
+/* 1-6 행 호버(마우스 올렸을때) */
+.boardTable tr:hover{ background-color: #e8e8e8;}
+.boardTable img{ width: 20px; vertical-align: middle; }
+
+/* 
+	하위요소를 인덱스로 식별하기 [ * 형제목록 ]
+		- 인덱스 : 1번부터 시작
+		- 목적 : 동일한 식별자가 여러개일때 사용 [ * 중복식별자를 식별할때 ]
+		- 상위요소 하위요소 : nth-child( 인덱스 )
+ 			.form input:nth-child( 1 )	: form 태그 하위요소의 첫번쨰 인덱스 요소 식별
+ 			.form input:nth-child( 3 )	: form 태그 하위요소의 세번쨰 인덱스 요소 식별
+ 		
+ 		- 상위요소 하위요소 : nth-child( odd ) : 형제목록 중에 홀수번째 요소 식별
+ 		- 상위요소 하위요소 : nth-child( even ) : 형제목록 중에 짝수번째 요소 식별
+ 		
+ 		
+ */
+
+/* 2.상단구역 */
+.boardtop{ text-align: center;}
+.boardtopetc{ 
+	display: flex;
+	justify-content: space-between;
+	margin: 20px 0px;	
+}
+
+.bbtn{
+	border-left: 1px solid white;
+	border-top: 1px solid white;
+	border-style: ridge;
+	background-color: #ACACAC;
+	width : 100px;
+	height : 30px;
+	font-size: 13px;
+}
+
+
+/* 3. 상단구역 */
+.boardbottom{
+	border-top: 1px solid #e8e8e8;
+	padding-top : 30px;
+	margin: 50px 0px;
+	text-align: center; 
+}
+
+.pagebox button{
+	border: none;
+	background-color: transparent; /* 투명색 */
+	font-size: 15px;
+	margin: 15px 10px; 
+}
+
+.keyword{
+	border-style: inset;
+	padding: 5px 10px;
+	width: 200px;
+}
+
+.selectpage{
+	width: 30px;
+	height: 30px;
+	background-color: #ACACAC !important;
+	border-radius: 50%; /* 원형 */
+}
+
+
+
+
+
+
+
+
