--- a/jspweb/src/main/webapp/css/chatting/chatting.css
+++ b/jspweb/src/main/webapp/css/chatting/chatting.css
@@ -76,11 +76,13 @@
 .content{/* 메세지 내용 */
 	padding: 10px; border-radius: 5px;
 	max-width: 80%; 
+	word-break: break-all; 
 }
 
 .date{/* 메시지 시간 */
 	font-size: 10px; margin: 0px 5px;
 }
+
 
 .alarm{/* 알림 메시지 */
 	background-color: #B1C3D5;
@@ -90,3 +92,28 @@
 	border-radius: 10px;
 	padding: 8px;	
 }
+
+/* -------------------------이모티콘 구역------------------------- */
+.dropdown .emobtn {
+	font-size: 25px; /* 폰트어썸 아이콘 크기 변경 */
+	background-color: transparent;/* 투명색 */
+	border: none;
+	margin: 5px 20px;
+}
+
+/* 드롭다운시 보이는 구역 */
+.emolistbox{
+	width: 300px; 
+	height: 300px;
+	overflow-y: scroll;
+}
+
+.dropdown .emolistbox img{
+	width: 60px;
+}
+
+
+
+
+
+
