--- a/jspweb/src/main/webapp/css/product/list.css
+++ b/jspweb/src/main/webapp/css/product/list.css
@@ -23,13 +23,35 @@ html , body{
 .mapcontent{
 	display: flex;
 	width: 100%;
-	height: 75%;
+	height: 800px;
 }
 
 #map{
-	width: 80%;
+	width: 70%;
 }
 
 .sidebar{
-	width: 20%;
+	width: 30%;
+	height: 85%;
+	overflow-y: scroll; 
 }
+
+.card{ 
+	margin: 10px;
+	height: 150px !important;
+}
+.card img{
+	object-fit : cover;
+	width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
