--- a/jspweb/src/main/webapp/css/header.css
+++ b/jspweb/src/main/webapp/css/header.css
@@ -6,8 +6,19 @@
 	margin: 0px; padding: 0px; 
 	box-sizing: border-box;
 	list-style-type: none;
-	font-family: Arial, sans-serif;
 }
+
+@font-face {
+    font-family: 'DOSIyagiMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/DOSIyagiMedium.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+*{
+	font-family:'DOSIyagiMedium';
+}
+
 a{color: black; text-decoration: none;}
 
 
